Agregado links del repositorio y page

--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!--
+Nombre completo: Gomez Olivera, Emiliano
+Repositorio de la calculadora: https://github.com/Wsott/Calculadora-JavaScript
+Github page: https://wsott.github.io/Calculadora-JavaScript/
+-->
+
 <html lang="es">
 <head>
     <meta charset="UTF-8">
